fixed find a pool button padding on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -857,7 +857,7 @@ MOBILE STYLESHEET
     color: #216ddf;
     background-color: white;
     border: 1px solid #216ddf;
-    padding: 5px;
+    padding: 8px;
   }
 
   .mobile__header-logo {
